# aoc2020

./: README.md
python/: .gitignore  Pipfile
python/01/: task.py
python/02/: task.py
python/03/: task.py
python/04/: task.py
python/05/: task.py
python/06/: task.py
python/07/: plot.py  task.py
python/08/: task.py
python/09/: task.py
python/10/: task.py
python/11/: task.py
python/14/: task.py
python/15/: task.py
rust/day01/: Cargo.toml
rust/day01/src/: lib.rs  main.rs
rust/day02/: Cargo.toml
rust/day02/src/: main.rs
rust/day03/: Cargo.toml
rust/day03/src/: main.rs
rust/day04/: Cargo.toml
rust/day04/src/: main.rs  passports.pest
rust/day05/: Cargo.toml
rust/day05/src/: main.rs
