[package]
name = "day04"
version = "0.1.0"
authors = ["ingwinlu <winklerlukas+work@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.0"

[dev-dependencies]
easybench = "1.0.0"

[profile.test]
opt-level = 3